# dendridb

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  dendridb_build_prompt.md  dendridb_milestone_roadmap.md  dendridb_overview.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_foundation.py  0002_memory_records.py  0003_working_memory_items.py  0004_episodes.py  0005_semantic_memory.py  0006_memory_associations.py  0007_memory_embeddings.py  0008_consolidation_jobs.py  0009_forgetting_decay.py
benchmarks/datasets/: .gitkeep  smoke.json  standard.json
benchmarks/scripts/: .gitkeep  run_benchmarks.py
docs/: api.md  architecture.md  benchmarking.md  deployment.md  development.md  hardening.md  milestones.md  overview.md  testing.md
scripts/: wait-for-postgres.sh
src/dendridb/: __init__.py
src/dendridb/api/: __init__.py  main.py
src/dendridb/benchmark/: __init__.py  dataset.py  report.py  runner.py  scenarios.py  timing.py
src/dendridb/cli/: __init__.py  main.py
src/dendridb/config/: __init__.py  settings.py
src/dendridb/core/: __init__.py  database.py  redis_client.py
src/dendridb/graph/: __init__.py  neo4j_store.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_memory_flow.py  test_live_api.py
tests/helpers/: e2e_flow.py
tests/integration/: conftest.py  test_associations.py  test_benchmark_smoke.py  test_consolidation.py  test_decay.py  test_episodes.py  test_health_db.py  test_memory_records.py  test_recall.py  test_semantic_memory.py  test_working_memory.py
tests/unit/: test_association_schemas.py  test_auto_link.py  test_benchmark.py  test_config.py  test_consolidation.py  test_decay_policy.py  test_embeddings.py  test_episode_schemas.py  test_expiry.py  test_health.py  test_hybrid_ranking.py  test_memory_schemas.py  test_promotion.py  test_semantic_memory_schemas.py  test_traversal.py  test_working_memory_schemas.py
(+60 files in other folders)
